--- a/criando-sua-primeiro-docker-container/index.html
+++ b/criando-sua-primeiro-docker-container/index.html
@@ -8,8 +8,8 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="../assets/built/screen.css?v=8fb8d98b85">
-    <link rel="stylesheet" type="text/css" href="../assets/css/prism.css?v=8fb8d98b85">
+    <link rel="stylesheet" type="text/css" href="../assets/built/screen.css?v=a4c5a7031b">
+    <link rel="stylesheet" type="text/css" href="../assets/css/prism.css?v=a4c5a7031b">
     <meta name="description" content="Docker é uma plataforma Open Source para empacotar serviços, aplicações, micro serviços e ambientes. Oferece uma variedade de plataformas.">
     <link rel="shortcut icon" href="../favicon.png" type="image/png">
     <link rel="canonical" href="http://www.coisadeprogramador.com.br/criando-sua-primeiro-docker-container/">
@@ -90,7 +90,7 @@
 }
     </script>
 
-    <script src="../public/ghost-sdk.min.js?v=8fb8d98b85"></script>
+    <script src="../public/ghost-sdk.min.js?v=a4c5a7031b"></script>
 <script>
 ghost.init({
 	clientId: "ghost-frontend",
@@ -146,7 +146,7 @@ ghost.init({
             <ul class="nav" role="menu">
     <li class="nav-home" role="menuitem"><a href="http://www.coisadeprogramador.com.br/">Home</a></li>
     <li class="nav-sobre" role="menuitem"><a href="http://www.coisadeprogramador.com.br/sobre/">Sobre</a></li>
-    <li class="nav-projetos" role="menuitem"><a href="http://www.coisadeprogramador.com.br/projetos/">Projetos</a></li>
+    <li class="nav-projetos" role="menuitem"><a href="http://www.coisadeprogramador.com.br/meus-projetos">Projetos</a></li>
     <li class="nav-contato" role="menuitem"><a href="http://www.coisadeprogramador.com.br/contato">Contato</a></li>
 </ul>
 
@@ -512,8 +512,8 @@ ghost               &lt;none&gt;              066a22d980f4        10 days ago   
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
     </script>
-    <script type="text/javascript" src="../assets/js/jquery.fitvids.js?v=8fb8d98b85"></script>
-    <script src="../assets/js/prism.js?v=8fb8d98b85"></script>
+    <script type="text/javascript" src="../assets/js/jquery.fitvids.js?v=a4c5a7031b"></script>
+    <script src="../assets/js/prism.js?v=a4c5a7031b"></script>
 
 
     <script>
