--- a/net-conversores-implicitos-explicitos/index.html
+++ b/net-conversores-implicitos-explicitos/index.html
@@ -8,8 +8,8 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="../assets/built/screen.css?v=8fb8d98b85">
-    <link rel="stylesheet" type="text/css" href="../assets/css/prism.css?v=8fb8d98b85">
+    <link rel="stylesheet" type="text/css" href="../assets/built/screen.css?v=a4c5a7031b">
+    <link rel="stylesheet" type="text/css" href="../assets/css/prism.css?v=a4c5a7031b">
     <meta name="description" content="Implementação básica de um conversor implícito e explicito. Onde aplicar, cuidados na implementação.">
     <link rel="shortcut icon" href="../favicon.png" type="image/png">
     <link rel="canonical" href="http://www.coisadeprogramador.com.br/net-conversores-implicitos-explicitos/">
@@ -84,7 +84,7 @@
 }
     </script>
 
-    <script src="../public/ghost-sdk.min.js?v=8fb8d98b85"></script>
+    <script src="../public/ghost-sdk.min.js?v=a4c5a7031b"></script>
 <script>
 ghost.init({
 	clientId: "ghost-frontend",
@@ -140,7 +140,7 @@ ghost.init({
             <ul class="nav" role="menu">
     <li class="nav-home" role="menuitem"><a href="http://www.coisadeprogramador.com.br/">Home</a></li>
     <li class="nav-sobre" role="menuitem"><a href="http://www.coisadeprogramador.com.br/sobre/">Sobre</a></li>
-    <li class="nav-projetos" role="menuitem"><a href="http://www.coisadeprogramador.com.br/projetos/">Projetos</a></li>
+    <li class="nav-projetos" role="menuitem"><a href="http://www.coisadeprogramador.com.br/meus-projetos">Projetos</a></li>
     <li class="nav-contato" role="menuitem"><a href="http://www.coisadeprogramador.com.br/contato">Contato</a></li>
 </ul>
 
@@ -405,8 +405,8 @@ Human human2 = (Human) superHero;
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
     </script>
-    <script type="text/javascript" src="../assets/js/jquery.fitvids.js?v=8fb8d98b85"></script>
-    <script src="../assets/js/prism.js?v=8fb8d98b85"></script>
+    <script type="text/javascript" src="../assets/js/jquery.fitvids.js?v=a4c5a7031b"></script>
+    <script src="../assets/js/prism.js?v=a4c5a7031b"></script>
 
 
     <script>
